# aiguardian-demo-app

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.chainlit/: config.toml
.chainlit/translations/: en-US.json
public/css/: chainlit.css
scripts/: entrypoint.sh
src/: .env.template  constants.py
src/apps/: base_app.py  default_app.py  fastapi_app.py  fastapi_chainlit_app.py  handlers.py
src/apps/chat/: chat_app.py
src/datatypes/: llm_config.py  llm_profile.py
src/libs/: cryptography_helper.py  logging_helper.py
src/services/sentinel/: aip_sentinel.py  bedrock_guardrails.py  main.py  sentinel.py
