[tool.poetry]
name = "chat-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10,<3.12"
chainlit = "^2.2.0"
langchain = "^0.3.4"
langchain-community = "^0.3.3"
langchain-openai = "^0.2.4"


[tool.poetry.group.aws.dependencies]
boto3 = "^1.35.50"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"


[tool.poetry.group.langfuse.dependencies]
langfuse = "^2.53.2"


[[tool.mypy.overrides]]
module = "requests"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
